--- a/package.json
+++ b/package.json
@@ -30,19 +30,19 @@
     "underscore": "~1.8.3"
   },
   "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-autoprefixer": "~3.0.3",
+    "extend": ">=3.0.2",
+    "grunt": "^1.0.4",
+    "grunt-autoprefixer": "~3.0.4",
     "grunt-contrib-connect": "~0.11.2",
-    "grunt-contrib-cssmin": "~0.14.0",
+    "grunt-contrib-cssmin": "~3.0.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-qunit": "^2.0.0",
-    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-uglify": "^3.4.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-sass": "~1.1.0",
+    "grunt-sass": "~3.1.0",
     "grunt-zip": "~0.17.1",
-    "node-sass": "^4.9.2",
-    "lodash": ">=4.17.11",
-    "extend": ">=3.0.2"
+    "lodash": "^4.17.15",
+    "node-sass": "^4.12.0"
   },
   "license": "MIT"
 }
